--- a/src/Controls/samples/Controls.Sample.UITests/Issues/Issue4734.xaml
+++ b/src/Controls/samples/Controls.Sample.UITests/Issues/Issue4734.xaml
@@ -42,7 +42,8 @@
                 </Label.FormattedText>
             </Label>
             <Label 
-                x:Name="TapResultLabel"/>
+                x:Name="TapResultLabel"
+                AutomationId="TapResultControl"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
